<resources>
    <string name="app_name">AndroidLessons</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="plus">+</string>
    <string name="_5">5</string>
    <string name="minus">-</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">:</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="multiple">*</string>
    <string name="is">=</string>
    <string name="typeOfFont">casual</string>
    <string name="C">C</string>
    <string name="back">Back</string>
    <string name="writeYourNumber">Введите число</string>
    <string name="Dividir">Дурак, что ли, на ноль делить?</string>
    <string name="tooEarly">Рано нажимать равно. Введите два числа.</string>
    <string name="Error">Ошибка. Попробуйте ещё раз.</string>
    <string name="changeStyle">Сменить стиль</string>
    <string name="dayTheme">Дневная тема</string>
    <string name="nightTheme">Ночная тема</string>
    <string name="ok">Применить</string>
    <string name="defaultStyle">Стиль по умолчанию</string>
</resources>