<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Space
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Space>
<!--    Space ничего не делает, только создает пространство-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textSize="50dp" />

        <Button
            android:id="@+id/button2"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:textSize="50dp" />

        <Button
            android:id="@+id/button3"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:textSize="50dp" />
<!--        по-хорошему где вес, надо писать ширину ноль-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:textSize="50dp" />

        <Button
            android:id="@+id/button5"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:textSize="50dp" />

        <Button
            android:id="@+id/button6"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:textSize="50dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:textSize="50dp" />

        <Button
            android:id="@+id/button8"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            android:textSize="50dp" />

        <Button
            android:id="@+id/button9"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            android:textSize="50dp">

        </Button>
<!--            style="@style/Widget.Design.FloatingActionButton"
можно стили менять-->
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button0"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="2"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="50dp" />

        <Button
            android:id="@+id/buttonDot"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/dot"
            android:textColor="#EF2727"
            android:textSize="50sp"
             />

    </LinearLayout>

    <Space
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Space>

</LinearLayout>