<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/checkBoxDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dayTheme" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/checkBoxNight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nightTheme" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonOk"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_margin="8dp"
        android:layout_height="wrap_content"
        android:text="@string/ok" />
</LinearLayout>