<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/leaf_176722_640"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        app:rippleColor="@color/rippleColor"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="254dp"
        android:backgroundTint="@color/backTintLightGreen"
        android:fontFamily="@string/typeOfFont"
        android:text="@string/_3"
        android:textColor="@color/buttonTextGreen"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button20"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        app:rippleColor="@color/rippleColor"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:backgroundTint="@color/backTintLightGreen"
        android:fontFamily="@string/typeOfFont"
        android:text="@string/_2"
        android:textColor="@color/buttonTextGreen"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/textVievHeight"
        android:background="@color/backTextLightGreen"
        android:hint="@string/writeYourNumber"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        app:rippleColor="@color/rippleColor"
        android:onClick="button1_onClick"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backTintLightGreen"
        android:fontFamily="@string/typeOfFont"
        android:text="@string/_1"
        android:textColor="@color/buttonTextGreen"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button20"
        app:rippleColor="@color/rippleColor"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backTintLightGreen"
        android:fontFamily="@string/typeOfFont"
        android:text="@string/plus"
        android:textColor="@color/buttonTextGreen"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        app:rippleColor="@color/rippleColor"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backTintLightGreen"
        android:fontFamily="@string/typeOfFont"
        android:text="@string/_5"
        android:textColor="@color/buttonTextGreen"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.02" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button21"
        app:rippleColor="@color/rippleColor"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backTintLightGreen"
        android:fontFamily="@string/typeOfFont"
        android:text="@string/minus"
        android:textColor="@color/buttonTextGreen"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button20"
        app:layout_constraintVertical_bias="0.02" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        app:rippleColor="@color/rippleColor"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backTintLightGreen"
        android:fontFamily="@string/typeOfFont"
        android:text="@string/_4"
        android:textColor="@color/buttonTextGreen"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.02" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button6"
        app:rippleColor="@color/rippleColor"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backTintLightGreen"
        android:fontFamily="@string/typeOfFont"
        android:text="@string/_6"
        android:textColor="@color/buttonTextGreen"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button21"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.02" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button7"
        app:rippleColor="@color/rippleColor"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backTintLightGreen"
        android:fontFamily="@string/typeOfFont"
        android:text="@string/_7"
        android:textColor="@color/buttonTextGreen"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button8"
        app:rippleColor="@color/rippleColor"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backTintLightGreen"
        android:fontFamily="@string/typeOfFont"
        android:text="@string/_8"
        android:textColor="@color/buttonTextGreen"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button9"
        app:rippleColor="@color/rippleColor"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:backgroundTint="@color/backTintLightGreen"
        android:fontFamily="@string/typeOfFont"
        android:text="@string/_9"
        android:textColor="@color/buttonTextGreen"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button12"
        app:rippleColor="@color/rippleColor"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backTintLightGreen"
        android:fontFamily="@string/typeOfFont"
        android:text="@string/divide"
        android:textColor="@color/buttonTextGreen"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button13"
        app:rippleColor="@color/rippleColor"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:backgroundTint="@color/backTintLightGreen"
        android:fontFamily="@string/typeOfFont"
        android:text="@string/_0"
        android:textColor="@color/buttonTextGreen"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button14"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button14"
        app:rippleColor="@color/rippleColor"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:backgroundTint="@color/backTintLightGreen"
        android:fontFamily="@string/typeOfFont"
        android:text="@string/dot"
        android:textColor="@color/buttonTextGreen"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button15"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button15"
        app:rippleColor="@color/rippleColor"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:backgroundTint="@color/backTintLightGreen"
        android:fontFamily="@string/typeOfFont"
        android:text="@string/multiple"
        android:textColor="@color/buttonTextGreen"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button14"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button16"
        app:rippleColor="@color/rippleColor"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#D2EFA7"
        android:fontFamily="@string/typeOfFont"
        android:text="@string/C"
        android:textColor="@color/buttonTextGreen"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/button17"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button17"
        app:rippleColor="@color/rippleColor"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="9dp"
        android:backgroundTint="#D2EFA7"
        android:fontFamily="@string/typeOfFont"
        android:text="@string/back"
        android:textColor="@color/buttonTextGreen"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="@+id/button3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button18"
        app:rippleColor="@color/redBright"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#D2EFA7"
        android:fontFamily="@string/typeOfFont"
        android:text="@string/is"
        android:textColor="@color/buttonTextGreen"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button15" />

</androidx.constraintlayout.widget.ConstraintLayout>