<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button29"
        android:layout_width="@dimen/standartButton"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="#D2EFA7"
        android:fontFamily="casual"
        android:textColor="#0E5302"
        android:textStyle="bold"
        android:text="@string/_9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button28"
        app:strokeColor="#D0E8B8"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@+id/button26" />

    <Button
        android:id="@+id/button28"
        android:layout_width="@dimen/standartButton"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="#D2EFA7"
        android:fontFamily="casual"
        android:textColor="#0E5302"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button29"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button27"
        app:strokeColor="#D0E8B8"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@+id/button25" />

    <Button
        android:id="@+id/button25"
        android:layout_width="@dimen/standartButton"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:backgroundTint="#D2EFA7"
        android:fontFamily="casual"
        android:textColor="#0E5302"
        android:textStyle="bold"
        android:layout_margin="@dimen/button_margin"
        app:layout_constraintBottom_toTopOf="@+id/button28"
        app:layout_constraintEnd_toStartOf="@+id/button26"
        app:layout_constraintHorizontal_bias="0.5"
        app:strokeColor="#D0E8B8"
        app:strokeWidth="2dp"
        app:layout_constraintStart_toEndOf="@+id/button24"
        app:layout_constraintTop_toBottomOf="@+id/button22" />

    <Button
        android:id="@+id/button21"
        android:layout_width="@dimen/standartButton"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:backgroundTint="#D2EFA7"
        android:fontFamily="casual"
        android:textColor="#0E5302"
        android:textStyle="bold"
        android:layout_margin="@dimen/button_margin"
        app:layout_constraintBottom_toTopOf="@+id/button24"
        app:layout_constraintEnd_toStartOf="@+id/button22"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#D0E8B8"
        app:strokeWidth="2dp"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button22"
        android:layout_width="@dimen/standartButton"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:backgroundTint="#D2EFA7"
        android:fontFamily="casual"
        android:textColor="#0E5302"
        android:textStyle="bold"
        android:layout_margin="@dimen/button_margin"
        app:layout_constraintBottom_toTopOf="@+id/button25"
        app:layout_constraintEnd_toStartOf="@+id/button23"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button21"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#D0E8B8"
        app:strokeWidth="2dp"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button23"
        android:layout_width="@dimen/standartButton"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:backgroundTint="#D2EFA7"
        android:fontFamily="casual"
        android:textColor="#0E5302"
        android:textStyle="bold"
        android:layout_margin="@dimen/button_margin"
        app:layout_constraintBottom_toTopOf="@+id/button26"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button22"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#D0E8B8"
        app:strokeWidth="2dp"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button24"
        android:layout_width="@dimen/standartButton"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        android:backgroundTint="#D2EFA7"
        android:fontFamily="casual"
        android:textColor="#0E5302"
        android:textStyle="bold"
        android:layout_margin="@dimen/button_margin"
        app:layout_constraintBottom_toTopOf="@+id/button27"
        app:layout_constraintEnd_toStartOf="@+id/button25"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#D0E8B8"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@+id/button21" />

    <Button
        android:id="@+id/button26"
        android:layout_width="@dimen/standartButton"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        android:backgroundTint="#D2EFA7"
        android:fontFamily="casual"
        android:textColor="#0E5302"
        android:textStyle="bold"
        android:layout_margin="@dimen/button_margin"
        app:layout_constraintBottom_toTopOf="@+id/button29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:strokeColor="#D0E8B8"
        app:strokeWidth="2dp"
        app:layout_constraintStart_toEndOf="@+id/button25"
        app:layout_constraintTop_toBottomOf="@+id/button23" />

    <Button
        android:id="@+id/button27"
        android:layout_width="@dimen/standartButton"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        android:backgroundTint="#D2EFA7"
        android:fontFamily="casual"
        android:textColor="#0E5302"
        android:textStyle="bold"
        android:layout_margin="@dimen/button_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button28"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#D0E8B8"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@+id/button24" />

    <Button
        android:id="@+id/button30"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:backgroundTint="#D2EFA7"
        android:fontFamily="casual"
        android:textColor="#0E5302"
        android:textStyle="bold"
        app:strokeColor="#D0E8B8"
        app:strokeWidth="2dp"
        app:layout_constraintStart_toStartOf="@+id/button27"
        app:layout_constraintTop_toBottomOf="@+id/button27" />

    <Button
        android:id="@+id/button31"
        android:layout_width="@dimen/standartButton"
        android:layout_height="wrap_content"
        android:backgroundTint="#D2EFA7"
        android:fontFamily="casual"
        android:text="@string/dot"
        android:textColor="#0E5302"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button29"
        app:layout_constraintTop_toBottomOf="@+id/button29"
        app:strokeColor="#D0E8B8"
        app:strokeWidth="2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>